Job controller base added.

--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -26,3 +26,7 @@ en:
       goto: Register
       update: Account
     big_title: Create an account
+  job:
+    button:
+      new: New Search
+      list: My Searches
