--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -37,6 +37,20 @@ en:
       no_server: The remote job server is down. Please, try again later.
       error: Failed to create a new job.
       success: Job created successfully.
+      notice:
+        title: Regarding job creation
+        notice1:
+          title: Max 200 IDs
+          content: Try to divide very large jobs into multiple smaller ones, as large jobs take longer to complete and may overload the system.
+        notice2:
+          title: Long jobs
+          content: The more IDs there are in your job, the longer the system will take to process the results. Larger jobs may take several minutes to complete.
+        notice3:
+          title: Email alerts
+          content: You may choose to be notified through your account email when a job is finished. Tick the appropriate option in the form below to enable this behavior.
+        notice4:
+          title: Job results
+          content: When you submit a job you will be redirected to its results page. You can later view your finished and pending jobs from the "My Jobs" menu.
     example:
       id_list: "Ex: list of ENSEMBL and/or ENTREZ IDs, one per line"
       description: "Ex: short description of the job"
