--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -31,6 +31,10 @@ en:
   job:
     view:
       species: Species
+      description: Job description
+      legend: Legend
+      legend_stripe: Genes for which no protein binding sites where found
+      legend_red: IDs that could not be identified
       species_wait: Detecting
       species_none: Not found
       bad_job:
