--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -96,6 +96,7 @@ en:
       description: Job description
       legend: Legend
       proteins: Protein binding occurrences
+      proteins_bind: Number of possible bind locations
       legend_stripe: Gene with no protein binding sites #Genes for which no protein binding sites where found
       legend_red: Unidentified ID # IDs that could not be identified
       legend_blue: Additional information available #Click ID for more information
