CSV generation refactored.

--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -108,6 +108,8 @@ en:
         submit: Send
         title: Report a problem
       download: Download results
+      download_rbp: RBP information
+      download_prot: Protein information
       species: Species
       analysis: Analysis
       ontologies: Ontologies
