Prolog clauses generation added.

--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -110,6 +110,7 @@ en:
       download: Download results
       download_rbp: RBP information
       download_prot: Protein information
+      download_prolog: Complete dataset
       species: Species
       analysis: Analysis
       ontologies: Ontologies
