--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -65,6 +65,9 @@ en:
       update: Account
     big_title: Create an account
   job:
+    cluster:
+      title: No clustering analysis
+      content: Clustering analysis couldn't be performed for this data set, most likely because of insufficient data.
     protein:
       big_title: Protein info
       not_found: The specified protein doesn't exist.
@@ -121,7 +124,7 @@ en:
       date: Date
       time: Time
       legend: Legend
-      proteins: RBP occurrences
+      proteins: RBP frequency
       sequences: RNA sequences
       general_info: General info
       additional_info: Additional info
