--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -27,6 +27,9 @@ en:
     beta: PBS Finder is still in a beta state. As such, new features can be added at any time and old ones can be removed. There is a chance that future changes may break older records. Always backup important jobs.
     beta_title: Experimental version
     description:
+      title0: View the demo
+      description0: View and navigate the results of
+      description0_add: this experiment.
       title1: Find protein binding sites
       description1: Finding protein binding sites is easy. Just create an account, give us a list of IDs and we'll return all the relevant information for those IDs.
       title2: Mix input formats
