Download button added to iRAP configuration edit page.

--- a/webapp/app/locale/en.yml
+++ b/webapp/app/locale/en.yml
@@ -279,6 +279,7 @@ en:
         cancel: Cancel
         create_new: Use as template
         update: Update
+        download: Download configuration
     update:
       success: Configuration updated successfully.
       error: Failed to update the configuration.
